--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -1,4 +1,170 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+header>h1 {
+  margin: 1rem 0;
+  text-align: center;
+}
+
+nav {
+  height: 3rem;
+}
+
+nav>ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+
+  height: 100%;
+  ;
+
+  list-style-type: none;
+}
+
+nav>ul>li {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+nav>ul>li>a {
+  padding: 1rem 2rem;
+
+  text-decoration: none;
+}
+
+main {
+  margin-top: 1rem;
+}
+
+
+// Image:
+.image-section {
+  width: 100vw;
+}
+
+.image-section>img {
+  width: 100%;
+}
+
+// Map:
+.map-form-container>form {
+  margin: 0.5rem 0;
+}
+
 .leaflet-container {
-    width: 100%;
-    height: 100vh;
+  width: 100vw;
+  height: 50vh;
+
+  margin-top: 1rem;
+}
+
+// List:
+.list-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  width: 90vw;
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.list-form > input,
+.list-form > label {
+  width: 90%;
+  margin-top: 0.5rem;
+}
+
+.list-form>input:last-child {
+  width: fit-content;
+  padding: 0.5rem 1.5rem;
+}
+
+.landing-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+
+  width: 90vw;
+  margin: 1rem auto;
+}
+
+.landing-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  row-gap: 0.75rem;
+
+  width: 40vw;
+  max-width: 175px;
+  height: 200px;
+  margin-top: 2rem;
+  padding: 0.5rem;
+
+  border-radius: 5px;
+  box-shadow: 2px 2px 10px rgb(206, 206, 206);;
+}
+
+.landing-card > .buttons {
+  display: flex;
+  justify-content: space-between;
+
+  width: 90%;
+}
+
+.landing-card > .buttons>button {
+  padding: 0.25rem 0.5rem;
+}
+
+.landing-card > form > input {
+  display: block;
+  width: 95%;
+  margin: 0 auto;
+}
+.landing-card > form > button {
+  margin: 0.25rem 0 0 0.25rem;
+}
+
+.pagination-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+
+  width: 90vw;
+  margin: 1rem auto;
+
+  list-style-type: none;
+}
+
+
+.pagination-list > li > a {
+  text-decoration: none;
+}
+
+@media (min-width: 750px) {
+  .image-section {
+    width: 95vw;
+    margin: 1rem auto;
   }
+  .map-form-container {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+  }
+
+  .leaflet-container {
+    width: 95vw;
+    height: 75vh;
+  
+    margin: 1rem auto;
+  }
+}
