Sliding Navbar with hamburger btn

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -1,40 +1,100 @@
+@import 'color_variables';
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-header>h1 {
-  margin: 1rem 0;
-  text-align: center;
+body {
+  background-color: $primary-color;
+}
+
+header {
+  background-color: $secondary-color;
+  color: $text-color;
 }
 
 nav {
-  height: 3rem;
+  height: 100vh;
+  width: 50vw;
+
+  position: fixed;
+  top: 0;
+  right: 0;
+
+  background-color: $secondary-color;
+
+  transition: 0.25s ease-in-out;
 }
 
-nav>ul {
+nav > ul {
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
 
-  height: 100%;
-  ;
+  width: 100%;
+
+  margin-top: 5rem;
+}
+
+nav > ul > li {
+  width: fit-content;
 
   list-style-type: none;
 }
 
-nav>ul>li {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-nav>ul>li>a {
-  padding: 1rem 2rem;
+nav > ul > li > a {
+  padding: 0.5rem 1rem;
 
   text-decoration: none;
+  color: $text-color;
 }
+nav > ul > li:last-child {
+  margin-top: 4rem;
+  padding: 0.5rem 1rem;
+}
+
+.hidden {
+  transform: translateX(100%);
+}
+
+.burger-btn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+
+  position: absolute;
+  right: 5%;
+  top: 5%;
+  z-index: 10;
+
+  width: fit-content;
+  height: fit-content;
+
+  cursor: pointer;
+}
+.burger-top {
+  width: 25px;
+  height: 3px;
+
+  background-color: $text-color;
+}
+.burger-mid {
+  width: 25px;
+  height: 3px;
+
+  background-color: $text-color;
+}
+.burger-bot {
+  width: 25px;
+  height: 3px;
+
+  background-color: $text-color;
+}
+
 
 main {
   margin-top: 1rem;
@@ -74,8 +134,8 @@ main {
   margin: 0 auto;
 }
 
-.list-form > input,
-.list-form > label {
+.list-form>input,
+.list-form>label {
   width: 90%;
   margin-top: 0.5rem;
 }
@@ -111,26 +171,29 @@ main {
   padding: 0.5rem;
 
   border-radius: 5px;
-  box-shadow: 2px 2px 10px rgb(206, 206, 206);;
+  // box-shadow: 2px 2px 10px rgb(206, 206, 206);
+
+  background-color: $card-color
 }
 
-.landing-card > .buttons {
+.landing-card>.buttons {
   display: flex;
   justify-content: space-between;
 
   width: 90%;
 }
 
-.landing-card > .buttons>button {
+.landing-card>.buttons>button {
   padding: 0.25rem 0.5rem;
 }
 
-.landing-card > form > input {
+.landing-card>form>input {
   display: block;
   width: 95%;
   margin: 0 auto;
 }
-.landing-card > form > button {
+
+.landing-card>form>button {
   margin: 0.25rem 0 0 0.25rem;
 }
 
@@ -146,15 +209,47 @@ main {
 }
 
 
-.pagination-list > li > a {
+.pagination-list>li>a {
   text-decoration: none;
 }
 
+
+
 @media (min-width: 750px) {
+
+  // *** NAV *** //
+
+  .hidden {
+    transform: none;
+  }
+
+  nav {
+    position: relative;
+
+    width: 100%;
+    height: 3rem;
+    
+  }
+
+  nav > ul {
+    flex-direction: row;
+    justify-content: center;
+
+    width: 100%;
+    height: 100%;
+    margin: 0;
+  }
+
+  nav > ul > li {
+    height: f;
+  }
+
+
   .image-section {
     width: 95vw;
     margin: 1rem auto;
   }
+
   .map-form-container {
     display: flex;
     justify-content: center;
@@ -164,7 +259,7 @@ main {
   .leaflet-container {
     width: 95vw;
     height: 75vh;
-  
+
     margin: 1rem auto;
   }
 }
