Added cards styles

--- a/client/src/styles/_color_variables.scss
+++ b/client/src/styles/_color_variables.scss
@@ -3,3 +3,8 @@ $card-color: #171717;
 $secondary-color: #000;
 $accent-color: #1ed760;
 $text-color: #d4d4d4;
+$edit-btn-color: green;
+$delete-btn-color: brown;
+$buy-btn-color: $text-color;
+
+$alt-color: #1f1f1f;
