Added edit and create formularies styles

--- a/client/src/styles/_navbar_variables.scss
+++ b/client/src/styles/_navbar_variables.scss
@@ -1,4 +1,10 @@
+$header-height: 15vh;
+
 $desktop-nav-top-position: 10%;
-$desktop-nav-width: 4rem;
+
+$desktop-icon-nav-width: 4rem;
+$desktop-nav-width: 8rem;
+
 $list-gap: 1rem;
+
 $list-margin-top: 1rem;
