--- a/client/src/styles/_color_variables.scss
+++ b/client/src/styles/_color_variables.scss
@@ -6,5 +6,6 @@ $text-color: #d4d4d4;
 $edit-btn-color: green;
 $delete-btn-color: brown;
 $buy-btn-color: $text-color;
+$modal-color: hsl(0 0% 12% / 0.5);
 
 $alt-color: #1f1f1f;
