--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -122,6 +122,64 @@ nav>ul>li:last-child {
   background-color: white;
 }
 
+// *** AUTH FORMS *** //
+
+.signing-container {
+  width: 90%;
+  margin: 1rem auto;
+}
+
+.signing-container > h3 {
+  margin: 1rem 0;
+  color: $text-color;
+  text-align: center;
+}
+
+.signing-container > form {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1rem;
+
+  color: $text-color;
+}
+
+.signing-container > form > div {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+
+.signing-container > form > div > input {
+  height: 1.75rem;
+  padding: 0.25rem;
+  color: $text-color;
+  background-color: $modal-color;
+  border: 1px solid $accent-color;
+  border-radius: 20px;
+}
+
+.signing-container > form > button {
+  padding: 0.5rem 1rem;
+  background-color: $card-color;
+  color: $text-color;
+  border: 1px solid $accent-color;
+  border-radius: 20px;
+  cursor: pointer;
+} 
+
+.signing-container > form > button:hover {
+  background-color: $accent-color;
+}
+
+.signing-container > p {
+  margin: 1rem auto;;
+  text-align: center;
+  color: $accent-color;
+  cursor: pointer;
+}
+
 
 // Image:
 .image-section {
