--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -11,6 +11,12 @@ body {
   background-color: $alt-color;
 }
 
+main {
+  min-height: calc(100vh - $header-height - 1rem);
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+}
+
 header {
   height: 15vh;
 
@@ -742,6 +748,35 @@ nav>ul>li>a {
   background-color: $accent-color;
 }
 
+// *** FOOTER *** //
+
+footer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  padding: 1rem;
+
+  background-color: $secondary-color;
+  color: $text-color;
+}
+
+footer > .footer-dividers {
+  width: 100%;
+  height: 1px;
+  background-color: $accent-color;
+}
+
+.footer-div {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.footer-div > h4 {
+  color: $accent-color;
+}
+
 
 
 
@@ -914,6 +949,21 @@ nav>ul>li>a {
   }
   .create-nea-form > div > input {
     height: 1.25rem;
+  }
+
+  footer {
+    flex-direction: row;
+    justify-content: center;
+    gap: 3rem;
+
+    width: calc(100% - $desktop-icon-nav-width);
+    height: $footer-height;
+    margin-left: $desktop-icon-nav-width;
+  }
+
+  footer > .footer-dividers {
+    width: 1px;
+    height: 100%;
   }
 }
 
