Added link to swagger documentation and fixed main component position in signup page

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -777,13 +777,20 @@ footer > .footer-dividers {
   color: $accent-color;
 }
 
-
+.footer-div:last-child > a {
+  text-decoration: none;
+  color: $text-color;
+  cursor: pointer;
+}
 
 
 @media (min-width: 750px) {
 
   main {
     margin-left: $desktop-icon-nav-width;
+  }
+  .full {
+    margin-left: 0;
   }
 
   // *** NAV *** //
