--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -68,6 +68,7 @@ nav>ul>li>a {
   text-decoration: none;
   text-align: center;
   color: $text-color;
+  cursor: pointer;
 }
 
 .current-page::after {
