--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -84,11 +84,28 @@ nav>ul>li {
   list-style-type: none;
 }
 
+nav>ul>li:hover {
+  background-color: $alt-color;
+}
+
+nav>ul>li.current-page::after {
+  position: absolute;
+  top: 2rem;
+
+  width: calc($mobile-nav-width - 6rem);
+  height: 1px;
+
+  content: '';
+  background-color: $accent-color;
+}
+
 nav>ul>li>a {
   width: 100%;
+  height: 100%;
 
   text-decoration: none;
   text-align: center;
+  line-height: 2rem;
   color: $text-color;
   cursor: pointer;
 }
@@ -944,6 +961,14 @@ footer > .footer-dividers {
 
     width: 100%;
     height: 4rem;
+  }
+
+  nav>ul>li.current-page::after {
+    display: none;
+  }
+
+  nav>ul>li:hover {
+    background-color: $alt-color;
   }
 
   nav>ul>li:last-child {
